Fix PR feedback: unit tests context and Collectors.toList